--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,17 @@
 spring.application.name=garden-backend
 
-#define RSS url
+# database cfg
+spring.datasource.url=jdbc:mysql://localhost:3306/garden_db?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+spring.datasource.username=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.password=${DB_PASSWORD}
+
+# define RSS url
 rss.blog.url=https://noob.daze.su/rss.xml
+
+# define spriongboot port
+server.port=11451
+
+# enable SQL debug
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
